--- a/com.jaspersoft.studio.babel.editor/build.properties
+++ b/com.jaspersoft.studio.babel.editor/build.properties
@@ -12,6 +12,7 @@ bin.includes = META-INF/,\
                icons/,\
                html/,\
                plugin_it.properties,\
+               plugin_zh.properties,\
                context.xml,\
                schema/
 src.includes = icons/,\
