--- a/com.jaspersoft.studio.components/build.properties
+++ b/com.jaspersoft.studio.components/build.properties
@@ -9,4 +9,5 @@ bin.includes = plugin.xml,\
                icons/,\
                resources/,\
                plugin.properties,\
+               plugin_zh.properties,\
                plugin_it.properties
