--- a/com.jaspersoft.studio.rcp/build.properties
+++ b/com.jaspersoft.studio.rcp/build.properties
@@ -11,5 +11,7 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                introContent.xml,\
                plugin.properties,\
+               plugin_it.properties,\
+               plugin_zh.properties,\
                plugin_customization.ini,\
                updatesite.properties
