--- a/com.jaspersoft.studio.rcp/plugin.properties
+++ b/com.jaspersoft.studio.rcp/plugin.properties
@@ -8,6 +8,7 @@ menu.switchlanguage.mnemonic = L
 menu.switchlanguage.label = Language
 command.switchlanguage.english.label = English
 command.switchlanguage.italian.label = Italiano
+command.switchlanguage.chinese.label = Chinese
 toolbar.jss.label = Jaspersoft Studio Toolbar
 command.wizard.newdataadapter.label = New Data Adapter
 command.wizard.newreport.label = New JasperReport
