--- a/com.jaspersoft.studio.server/build.properties
+++ b/com.jaspersoft.studio.server/build.properties
@@ -9,6 +9,7 @@ bin.includes = plugin.xml,\
                icons/,\
                resources/,\
                plugin_it.properties,\
+               plugin_zh.properties,\
                plugin.properties,\
                lib/js-extra-classes.jar,\
                lib/jersey/asm-all-repackaged-2.2.0-b24.jar,\
