--- a/com.jaspersoft.studio/build.properties
+++ b/com.jaspersoft.studio/build.properties
@@ -16,6 +16,7 @@ bin.includes = plugin.xml,\
                icons/,\
                intro/,\
                plugin_it.properties,\
+               plugin_zh.properties,\
                images/,\
                lib/opal-1.0.1.jar,\
                .options,\
