--- a/eclipse.plugin.aiassistant/build.properties
+++ b/eclipse.plugin.aiassistant/build.properties
@@ -10,6 +10,8 @@ bin.includes = META-INF/,\
                dependencies/jackson-databind_2.16.0.jar,\
                dependencies/ST4-4.3.4.jar,\
                plugin.xml,\
+               plugin.properties,\
+               plugin_zh.properties,\
                prompts/,\
                js/,\
                json/,\
