--- a/net.sourceforge.sqlexplorer/build.properties
+++ b/net.sourceforge.sqlexplorer/build.properties
@@ -17,6 +17,7 @@ src.includes = .classpath,\
                test/,\
                license.txt,\
                plugin.properties,\
+               plugin_zh.properties,\s
                driver-src/
 bin.includes = default_drivers.xml,\
                icons/,\
@@ -36,6 +37,7 @@ bin.includes = default_drivers.xml,\
                lib/hibernate3.2.4.sp1.jar,\
                license.txt,\
                plugin.properties,\
+               plugin_zh.properties,\
                lib/fw.jar,\
                lib/poi-3.5-FINAL-20090928.jar,\
                lib/commons-logging.jar,\
