--- a/com.jaspersoft.studio.components.customvisualization/build.properties
+++ b/com.jaspersoft.studio.components.customvisualization/build.properties
@@ -9,6 +9,7 @@ bin.includes = META-INF/,\
                icons/,\
                OSGI-INF/,\
                plugin_it.properties,\
+               plugin_zh.properties,\
                plugin.xml,\
                plugin.properties,\
                schema/,\
