--- a/com.jaspersoft.studio.data.sql.ui/build.properties
+++ b/com.jaspersoft.studio.data.sql.ui/build.properties
@@ -8,5 +8,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                plugin.properties,\
+               plugin_zh.properties,\
                plugin_it.properties
 
