--- a/com.jaspersoft.studio.editor.jrexpressions.ui/build.properties
+++ b/com.jaspersoft.studio.editor.jrexpressions.ui/build.properties
@@ -10,5 +10,6 @@ bin.includes = META-INF/,\
                schema/,\
                plugin.properties,\
                plugin_it.properties,\
+               plugin_zh.properties,\
                css/
 
