--- a/com.jaspersoft.studio.properties/build.properties
+++ b/com.jaspersoft.studio.properties/build.properties
@@ -7,4 +7,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties,\
+               plugin_it.properties,\
+               plugin_zh.properties,\
                images/
