no need to download js

--- a/com.jaspersoft.studio.rcp.macosx/.classpath
+++ b/com.jaspersoft.studio.rcp.macosx/.classpath
@@ -7,6 +7,5 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/eclipse-workspace/jaspersoft/repository-4.28/plugins/org.eclipse.swt.cocoa.macosx.x86_64_3.124.0.v20230523-1044.jar"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
