--- a/net.sourceforge.sqlexplorer/build.properties
+++ b/net.sourceforge.sqlexplorer/build.properties
@@ -17,7 +17,7 @@ src.includes = .classpath,\
                test/,\
                license.txt,\
                plugin.properties,\
-               plugin_zh.properties,\s
+               plugin_zh.properties,\
                driver-src/
 bin.includes = default_drivers.xml,\
                icons/,\
