add chinese resources

--- a/com.jaspersoft.studio/plugin.properties
+++ b/com.jaspersoft.studio/plugin.properties
@@ -163,3 +163,65 @@ bringBackwardName=Bring Backward Selection
 bringBackwardDescription=Bring Backward the current selection in the outline view, the outline must be focused
 forceParentKeepName=Never Change Parent
 forceParentKeepDescription=When dragging elements the original parent never change, independently from where they are dropped.
+
+JasperReportsJRXMLFile=JasperReports JRXML File
+JasperReportsDesigner=JasperReports Designer
+JasperPrintViewer=JasperPrint Viewer
+JasperJRPxmlViewer=JasperJRPxml Viewer
+JasperStyleTemplateEditor=Jasper Style Template Editor
+JasperReportsPreview=JasperReports Preview
+DataAdapterEditor=DataAdapter Editor
+JasperReportsToolDesigner=JasperReports Tool Designer
+FontExtensionEditor=Font Extension Editor
+ReportDesign=Report Design
+JaspersoftStudio=Jaspersoft Studio
+Exporters=Exporters
+PDFExporter=PDF Exporter
+HTMLExporter=HTML Exporter
+CSVExporter=CSV Exporter
+CSVMetadataExporter=CSV Metadata Exporter
+TextExporter=Text Exporter
+ExcelExporter=Excel Exporter
+XMLExporter=XML Exporter
+DOCXExporter=DOCX Exporter
+G2Dxporter=G2D Exporter
+Properties=Properties
+ReportDesignerThemes=Report Designer Themes
+ReportExecution=Report Execution
+Fonts=Fonts
+RulersAndGridPreferences=Rulers And Grid Preferences
+ParameterSets=Parameter Sets
+RepositoryExplorer=Repository Explorer
+ReportState=Report State
+TemplateView=Template View
+TraceReportView=Trace Report View
+CreateanewJasperReport=Create a new JasperReport
+CreateanewStyleTemplateforJasperReport=Create a new Style Template for JasperReport
+CreateanewDataAdapter=Create a new Data Adapter
+CreateanewFunctionsLibrary=Create a new Functions Library
+PluginDataAdapter=Plug-in Data Adapter
+Createanewdataadapterskeleton=Create a new data adapter skeleton
+JasperReportsFontsExtension=JasperReports Fonts Extension
+ResetUUIDs=Reset UUIDs
+ReportRepository=Report Repository
+State=State
+DataAdapterFile=DataAdapter File
+StyleTemplateFile=Style Template File
+ReportRepositoryType=Report Repository Type
+DefaultNosetting=Default - No setting
+JasperReportsLibrary=JasperReports Library
+ImportDataAdaptersfromiReport=Import Data Adapters from iReport
+ImportDataAdaptersfromanotherJSSWorkspace=Import Data Adapters from another JSS Workspace
+ExportthereportasanewReportTemplate=Export the report as a new Report Template
+
+
+
+
+
+
+
+
+
+
+
+
