add locate resource

--- a/com.jaspersoft.studio.components/plugin.properties
+++ b/com.jaspersoft.studio.components/plugin.properties
@@ -26,5 +26,8 @@ createTabelColBeforeSelected=Create a new column before the selected one
 createTabelColAfterSelected=Create a new column after the selected one
 TableAction=Table Actions
 CrosstabAction=Crosstab Actions
-MapKey=Map Component Keys
+MapComponentKeys=Map Component Keys
 ChartCustomizers=Chart Customizers
+ChartThemeEditor=Chart Theme Editor
+ChartThemes=Chart Themes
+CreateanewChartTheme=Create a new Chart Theme
