--- a/com.jaspersoft.studio.data/build.properties
+++ b/com.jaspersoft.studio.data/build.properties
@@ -6,6 +6,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
+               plugin.properties,\
+               plugin_zh.properties,\
                icons/,\
                lib/commons-vfs-1.0.jar,\
                lib/eigenbase-properties-1.1.0.10924.jar,\
