--- a/com.jaspersoft.studio.components.customvisualization/plugin.properties
+++ b/com.jaspersoft.studio.components.customvisualization/plugin.properties
@@ -5,4 +5,9 @@ buildComponent=Build Component
 buildComponents=Build All Components
 newComponentWizardDescription=Create a skeleton for a Custom Visualization Component
 propertyTab = Data
-ComponentDescriptors=Custom Visualisation Component
+ComponentDescriptors=Custom Visualization Component
+CustomVisualizationComponent=Custom Visualization Component
+JaspersoftStudio=Jaspersoft Studio
+ItemPropertyEditor=Item Property Editor
+CVCNature=CVC Nature
+CVCBuilder=CVC Builder
