--- a/com.jaspersoft.studio.rcp/plugin.properties
+++ b/com.jaspersoft.studio.rcp/plugin.properties
@@ -21,3 +21,4 @@ activity.javadevel.name = Java Development
 category.languages.name = Languages
 command.languages.name = Language
 commandParameter.languages.name = locale
+aboutText=Jaspersoft® Studio 6.20.6 - Visual Designer for JasperReports 6.20.6. \nCopyright (C) 2010 - 2025 Cloud Software Group, Inc. All rights reserved. \n\nFor more information, please visit \nhttps://community.jaspersoft.com/project/jaspersoft-studio  \n\nSpecial thanks to all people who support this software.
