--- a/com.jaspersoft.studio/plugin.properties
+++ b/com.jaspersoft.studio/plugin.properties
@@ -213,3 +213,6 @@ JasperReportsLibrary=JasperReports Library
 ImportDataAdaptersfromiReport=Import Data Adapters from iReport
 ImportDataAdaptersfromanotherJSSWorkspace=Import Data Adapters from another JSS Workspace
 ExportthereportasanewReportTemplate=Export the report as a new Report Template
+Selecting=Selecting
+Dragging=Dragging
+ElementsSelected=Elements Selected
